6 practical work after second review, fix popup on mobile screen

--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -3,3 +3,19 @@
     flex-direction: column;
     margin: 44px 36px 37px;
 }
+
+@media screen and (max-width: 660px) {
+    .popup__form{
+        font-size: 18px;
+        margin: 70px 22px 36px;
+        line-height: 22px;
+    }
+}
+
+@media screen and (max-width: 550px) {
+    .popup__form{
+        margin: 0 22px 25px;
+        padding-top: 50px;
+    }
+}
+    
